--- a/style.css
+++ b/style.css
@@ -263,3 +263,14 @@ article p {
         width: auto;
     }
 }
+
+@media screen and (max-width: 500px) {
+    
+    h1{
+        font-size: 1.5rem;
+    }
+
+    .header .header-img{
+        max-width:200px;
+    }
+  }
